@@ -1122,6 +1122,10 @@ Documentation
 Build
 -----
 
+- bpo-20210: Support the *disabled* marker in Setup files. Extension modules
+  listed after this marker are not built at all, neither by the Makefile nor by
+  setup.py.
+
 - bpo-29941: Add ``--with-assertions`` configure flag to explicitly enable
   C ``assert()`` checks. Defaults to off. ``--with-pydebug`` implies
   ``--with-assertions``.
